--- a/src/components/SwipeDemo/SwipeDemo.module.css
+++ b/src/components/SwipeDemo/SwipeDemo.module.css
@@ -81,7 +81,7 @@
 
 .cardsContainer {
   position: relative;
-  height: 480px;
+  height: 520px;
   width: 100%;
   max-width: 320px;
   display: flex;
